k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
    spec:
      containers:
        - name: web
          image: quay.io/YOURUSERNAME/simple-web:latest
          ports:
            - containerPort: 80
