k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple-web
spec:
  to:
    kind: Service
    name: simple-web
  port:
    targetPort: 80
